www/style.core.css
* {
	margin: 0;
	padding: 0;
}

html {
	
}

body {
	font-family: Arial, Helvetica, sans-serif;
	/*width: 900px;
	margin: 24px auto;*/
	overflow: hidden;
}

h1 {
	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
}

#wrapper {
	
}

#header {
	padding: 2px 16px;
}

#nav {
	
}

#content {
	padding-right: 16px;
}

#content_left {
	width: 22%;
	float: left;
}

#content_center {
	width: 44%;
	float: left;
}

#content_right {
	width: 34%;
	float: left;
}

#files {
	overflow: auto;
	margin: 8px;
	height: 300px;
}

#files > li {
	float: left;
	list-style-type: none;
	margin: 8px;
	width: 96px;
	height: 96px;
	background: #ccc;
}

.clearfix {
	clear: both;
	height: 16px;
}

.panel {
	margin: 16px 0 0 16px;
	overflow: hidden;
}

.panel > h2 {
	padding: 2px 8px;
	font-size: 14px;
}

.menu, .tab {
	padding: 2px 8px;
}

button {
	font-size: 14px;
	padding: 2px 4px;
	margin-right: 1px;
}

button:hover {
}

.tab {
	padding-bottom: 0;
}

.tab > button {
	font-size: 14px;
	padding: 2px 4px;
	margin-bottom: -1px;
	margin-left: -2px;
}

.tab > button.current {
}

.tab > button:hover {
}

#canvas {
	margin: 12px;
	height: 200px;
	text-align: center;
}

#canvas > span {
	line-height: 200px;
}

.panel_content {
	margin: 12px;
}

.input {
	padding: 2px;
	margin-bottom: 8px;
	width: 100%;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing:border-box;
}
/*
.comment {
	border: 1px solid #aaa;
	box-shadow: 0 4px 8px #eee inset;
	-moz-box-shadow: 0 4px 8px #eee inset;
	-webkit-box-shadow: 0 4px 8px #eee inset;
	border-radius: 4px;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	padding: 4px;
	font-size: 14px;
	color: #888;
	position: relative;
}

.comment:after, .comment:before {
	border: solid transparent;
	content: ' ';
	height: 0;
	top: 100%;
	position: absolute;
	width: 0;
}

.comment:after {
	border-width: 7px;
	border-top-color: #fff;
	left: 9px;
}

.comment:before {
	border-width: 8px;
	border-top-color: #888;
	left: 8px;
}
*/
#title {
}

#author {
}

#code {
	font-size: 16px;
	font-family: monospace;
	color: black;
	overflow: auto;
	height: 420px;
}
/*
button {
	border: 1px solid #aaa;
	background: #eee;
	box-shadow: 0 2px 4px #ddd, 0 8px 16px #fff inset;
	-moz-box-shadow: 0 2px 4px #ddd, 0 8px 16px #fff inset;
	-webkit-box-shadow: 0 2px 4px #ddd, 0 8px 16px #fff inset;
	border-radius: 4px;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	margin-bottom: 8px;
	font-size: 14px;
	padding: 4px;
	color: #888;
}

button:hover {
	border: 1px solid #888;
	color: #555;
}

button:active {
	box-shadow: 0 2px 4px #ddd, 0 -8px 16px #fff inset;
	-moz-box-shadow: 0 2px 4px #ddd, 0 -8px 16px #fff inset;
	-webkit-box-shadow: 0 2px 4px #ddd, 0 -8px 16px #fff inset;
}
*/

#footer {
	
}

